[project]
name = "data-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google>=3.0.0",
    "google-genai>=2.9.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.10",
    "langgraph>=1.2.6",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
